[gd_scene load_steps=7 format=2]

[ext_resource path="res://SettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://Art/v1.1 dungeon crawler 16x16 pixel pack/ui (new)/pause_button_press.png" type="Texture" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Art/Font/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Art/Font/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[node name="SettingsMenu" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BackGround" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0666667, 0.364706, 0.458824, 1 )

[node name="SettingTabs" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
tab_align = 0

[node name="Audio" type="Tabs" parent="SettingTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 38.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="SettingTabs/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AudioSettings" type="GridContainer" parent="SettingTabs/Audio/MarginContainer"]
margin_right = 472.0
margin_bottom = 228.0
columns = 2

[node name="MasterVolLabel" type="Label" parent="SettingTabs/Audio/MarginContainer/AudioSettings"]
margin_right = 125.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 4 )
text = "Master Volume"

[node name="MasterVolSlider" type="HSlider" parent="SettingTabs/Audio/MarginContainer/AudioSettings"]
margin_left = 222.0
margin_right = 472.0
margin_bottom = 20.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
value = 50.0

[node name="MusicVolLabel" type="Label" parent="SettingTabs/Audio/MarginContainer/AudioSettings"]
margin_top = 24.0
margin_right = 125.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 4 )
text = "Music Volume"

[node name="MusicVolSlider" type="HSlider" parent="SettingTabs/Audio/MarginContainer/AudioSettings"]
margin_left = 222.0
margin_top = 24.0
margin_right = 472.0
margin_bottom = 44.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
max_value = 80.0
value = 40.0

[node name="EffectVolLabel" type="Label" parent="SettingTabs/Audio/MarginContainer/AudioSettings"]
margin_top = 48.0
margin_right = 125.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 4 )
text = "SFX Volume"

[node name="EffectVolSlider" type="HSlider" parent="SettingTabs/Audio/MarginContainer/AudioSettings"]
margin_left = 222.0
margin_top = 48.0
margin_right = 472.0
margin_bottom = 68.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
max_value = 80.0
value = 40.0

[node name="ExitButoon" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -28.0
margin_bottom = 28.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true

[connection signal="value_changed" from="SettingTabs/Audio/MarginContainer/AudioSettings/MasterVolSlider" to="." method="_on_MasterVolSlider_value_changed"]
[connection signal="value_changed" from="SettingTabs/Audio/MarginContainer/AudioSettings/MusicVolSlider" to="." method="_on_MusicVolSlider_value_changed"]
[connection signal="value_changed" from="SettingTabs/Audio/MarginContainer/AudioSettings/EffectVolSlider" to="." method="_on_EffectVolSlider_value_changed"]
[connection signal="pressed" from="ExitButoon" to="." method="_on_ExitButoon_pressed"]
